--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -33,9 +33,14 @@
 @Misc{feilmeier,
     author = {Stefan Feilmeier},
     title = {Loads management based on Photovoltaic and Energy Storage System},
-    date = {2015},
+    date = {July 2015},
 }
 
+@Misc{antonescu,
+    author = {Antonescu Vasile Catalin, Conf. Dr. Ing. Árpád Gellért},
+    title = {Predicția Consumului ȘI a Producției De Energie Folosind Metode Contextuale},
+    date = {July 2017},
+}
 
 @Misc{oxfordForecast,
     author = {Oxford University Press},
