--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -38,7 +38,7 @@
 
 @Misc{antonescu,
     author = {Antonescu Vasile Catalin, Conf. Dr. Ing. Árpád Gellért},
-    title = {Predicția Consumului ȘI a Producției De Energie Folosind Metode Contextuale},
+    title = {Predicția Consumului Și a Producției De Energie Folosind Metode Contextuale},
     date = {July 2017},
 }
 
